--- a/templates/failedurls.html
+++ b/templates/failedurls.html
@@ -1,9 +1,17 @@
-<!DOCTYPE html>
+{% load static %}
+
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css'%}">
+    <script src="{% static 'js/bootstrap.js' %}"></script>
 </head>
 <body>
-    <h1>{{ response }}</h1>
+<div class="alert alert-warning" role="alert">
+    <strong>{{ response }}</strong>
+</div>
 </body>
 </html>
